# Algoritmos-de-Gestao-de-Energia-Projeto-Final

./: Agents.py  QLearning.py  analisador.py  main.py  pyproject.toml  qlearning_plume.pkl  qlearning_plume_20260427_095504.pkl  teste.py
Interface/: api.py  dashboard.html
experiments/: bio_inspired_test_exp0_20260415_180353.h5  bio_inspired_test_exp0_20260415_181848.h5  bio_inspired_test_exp0_20260416_091233.h5  bio_inspired_test_exp0_20260416_091345.h5  bio_inspired_test_exp0_20260416_094622.h5  bio_inspired_test_exp0_20260423_083750.h5  bio_inspired_test_exp0_20260423_083850.h5  bio_inspired_test_exp0_20260427_091710.h5  bio_inspired_test_exp1_20260415_180359.h5  bio_inspired_test_exp1_20260415_182005.h5  bio_inspired_test_exp1_20260416_091458.h5  bio_inspired_test_exp1_20260416_094834.h5  bio_inspired_test_exp1_20260423_083930.h5  bio_inspired_test_exp2_20260415_180405.h5  bio_inspired_test_exp2_20260416_091608.h5  bio_inspired_test_exp2_20260423_084040.h5  bio_inspired_test_exp3_20260415_180410.h5  bio_inspired_test_exp3_20260416_091718.h5  bio_inspired_test_exp3_20260423_084140.h5  bio_inspired_test_exp4_20260415_180412.h5  bio_inspired_test_exp4_20260416_091818.h5  bio_inspired_test_exp4_20260423_084250.h5  bio_inspired_test_exp5_20260415_180414.h5  bio_inspired_test_exp5_20260423_084400.h5  bio_inspired_test_exp6_20260415_180416.h5  bio_inspired_test_exp6_20260423_084419.h5  bio_inspired_test_exp7_20260415_180419.h5  bio_inspired_test_exp7_20260423_084512.h5  bio_inspired_test_exp8_20260415_180424.h5  bio_inspired_test_exp8_20260423_084557.h5  (+2 more)
(+10 files in other folders)
