[project]
name = "algoritmos-de-gestao-de-energia-projeto-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "gymnasium>=1.3.0",
    "h5py>=3.16.0",
    "jit>=0.2.7",
    "matplotlib>=3.10.9",
    "numba>=0.65.1",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "ruff>=0.15.12",
]
